--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,15 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="myCard container-flex">
-      <div class="col-3 topLeft">
-        <img
-          class="one"
-          src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1f/Card_diamond.svg/743px-Card_diamond.svg.png"
-        />
+      <div class="topLeft">
+        <img class="one" />
       </div>
-      <div class="col-6 middle"><h1>7</h1></div>
-      <div class="col-3 bottomright">
-        <img
-          class="two"
-          src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1f/Card_diamond.svg/743px-Card_diamond.svg.png"
-        />
+      <div class="middle"><h1></h1></div>
+      <div class="bottomright">
+        <img class="two" />
       </div>
     </div>
   </body>
